[package]
name = "bump-scope"
version = "0.16.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A fast bump allocator that supports allocation scopes / checkpoints. Aka an arena for values of arbitrary types."
categories = ["memory-management", "no-std", "no-std::no-alloc"]
keywords = ["allocator", "arena", "no-std", "bump", "allocation"]
documentation = "https://docs.rs/bump-scope"
repository = "https://github.com/bluurryy/bump-scope"
rust-version = "1.64.0"
readme = "README.md"
exclude = ["*.nu", "justfile", "tests", ".vscode", ".github"]

[dependencies]
allocator-api2-02 = { package = "allocator-api2", version = "0.2.21", default-features = false, optional = true }
allocator-api2-03 = { package = "allocator-api2", version = "0.3.0", default-features = false, optional = true }
sptr = "0.3.2"
serde = { version = "1.0.217", optional = true }
zerocopy = { version = "0.8.14", default-features = false, optional = true }
rustversion = "1.0.19"

[features]
default = ["std", "alloc", "panic-on-alloc"]

## Adds `BumpPool` and implementations of `std::io` traits.
std = ["alloc", "allocator-api2-02?/std", "allocator-api2-03?/std"]

## Adds `Global` as the default base allocator and some interactions with `alloc` collections.
alloc = ["allocator-api2-02?/alloc", "allocator-api2-03?/alloc"]

## Adds functions and traits that will panic when the allocation fails. 
## Without this feature, allocation failures cannot cause panics, and only 
## `try_`-prefixed allocation methods will be available.
panic-on-alloc = []

## Adds `Serialize` implementations for `BumpBox`, strings and vectors, and `DeserializeSeed` for strings and vectors. 
serde = ["dep:serde"]

## Adds `alloc_zeroed(_slice)`, `init_zeroed`, `resize_zeroed` and `extend_zeroed`. 
zerocopy = ["dep:zerocopy"]

## Makes `Bump(Scope)` implement `allocator_api2::Allocator` and
## allows using an `allocator_api2::Allocator` as a base allocators via
## [`AllocatorApiV02Compat`](crate::compat::AllocatorApi2V02Compat).
allocator-api2-02 = ["dep:allocator-api2-02"]

## Makes `Bump(Scope)` implement `allocator_api2::Allocator` and
## allows using an `allocator_api2::Allocator` as a base allocators via
## [`AllocatorApiV03Compat`](crate::compat::AllocatorApi2V03Compat).
allocator-api2-03 = ["dep:allocator-api2-03"]

#! ### Nightly features

## Makes `Bump(Scope)` implement `alloc::Allocator` and
## allows using an `alloc::Allocator` as a base allocators via
## [`AllocatorNightlyCompat`](crate::compat::AllocatorNightlyCompat).
##
## This will also enable "allocator-api2-02/nightly".
nightly-allocator-api = ["allocator-api2-02/nightly"]

## Makes `BumpBox<T>` implement [`CoerceUnsized`](core::ops::CoerceUnsized).
## With this `BumpBox<[i32;3]>` coerces to `BumpBox<[i32]>`, `BumpBox<dyn Debug>` and so on.
## You can unsize a `BumpBox` in stable without this feature using [`unsize_bump_box`].
nightly-coerce-unsized = []

## Implements `is_empty` manually for some iterators.
nightly-exact-size-is-empty = []

## Implements `TrustedLen` for some iterators.
nightly-trusted-len = []

## Implements `Fn*` traits for `BumpBox<T>`. Makes `BumpBox<T: FnOnce + ?Sized>` callable. Requires alloc crate.
nightly-fn-traits = []

[dev-dependencies]
trybuild = "1.0.90"
expect-test = "1.4.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
bumpalo = "3.16.0"
rayon = "1.10.0"
serde_json = "1.0.115"
document-features = "0.2.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
allow-branch = ["main"]
pre-release-hook = ["just", "pre-release"]
pre-release-commit-message = "release: version {{version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}} ({{date}})" },
]

[[bench]]
name = "benches"
harness = false
