[package]
name = "bump-scope-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuzzing-support = { path = "../crates/fuzzing-support" }

[[bin]]
name = "bumping"
path = "fuzz_targets/bumping.rs"
test = false
doc = false
bench = false

[[bin]]
name = "allocator"
path = "fuzz_targets/allocator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_up"
path = "fuzz_targets/bump_up.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_down"
path = "fuzz_targets/bump_down.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_greedy_up"
path = "fuzz_targets/bump_greedy_up.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_greedy_down"
path = "fuzz_targets/bump_greedy_down.rs"
test = false
doc = false
bench = false
