[package]
name = "bump-scope-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
fuzzing-support = { path = "../crates/fuzzing-support" }
env_logger = { version = "0.11.8", default-features = false }

[[bin]]
name = "alloc_static_layout"
path = "fuzz_targets/alloc_static_layout.rs"
test = false
doc = false
bench = false

[[bin]]
name = "allocator_api"
path = "fuzz_targets/allocator_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_down"
path = "fuzz_targets/bump_down.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_prepare_down"
path = "fuzz_targets/bump_prepare_down.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_prepare_up"
path = "fuzz_targets/bump_prepare_up.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_up"
path = "fuzz_targets/bump_up.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bump_vec"
path = "fuzz_targets/bump_vec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_size"
path = "fuzz_targets/chunk_size.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slice_split_off"
path = "fuzz_targets/slice_split_off.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vec_split_off"
path = "fuzz_targets/vec_split_off.rs"
test = false
doc = false
bench = false
