[package]
name = "bump-scope-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "alloc_static_layout"
path = "fuzz_targets/alloc_static_layout.rs"
test = false

[[bin]]
bench = false
doc = false
name = "allocator_api"
path = "fuzz_targets/allocator_api.rs"
test = false

[[bin]]
bench = false
doc = false
name = "bump_down"
path = "fuzz_targets/bump_down.rs"
test = false

[[bin]]
bench = false
doc = false
name = "bump_prepare_down"
path = "fuzz_targets/bump_prepare_down.rs"
test = false

[[bin]]
bench = false
doc = false
name = "bump_prepare_up"
path = "fuzz_targets/bump_prepare_up.rs"
test = false

[[bin]]
bench = false
doc = false
name = "bump_up"
path = "fuzz_targets/bump_up.rs"
test = false

[[bin]]
bench = false
doc = false
name = "bump_vec"
path = "fuzz_targets/bump_vec.rs"
test = false

[[bin]]
bench = false
doc = false
name = "chunk_size"
path = "fuzz_targets/chunk_size.rs"
test = false

[[bin]]
bench = false
doc = false
name = "slice_split_off"
path = "fuzz_targets/slice_split_off.rs"
test = false

[[bin]]
bench = false
doc = false
name = "vec_split_off"
path = "fuzz_targets/vec_split_off.rs"
test = false

[dependencies]
env_logger = { version = "0.11.8", default-features = false }
fuzzing-support = { path = "../crates/fuzzing-support" }
libfuzzer-sys = "0.4.10"
