[package]
name = "callgrind-benches"
edition = "2024"

[[bench]]
name = "bench"
harness = false

[dependencies]
fast-glob = "1.0.0"
markdown-tables = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
benches-lib = { path = "benches-lib" }
gungraun = "0.17.0"
paste = "1.0.15"

[profile.bench]
debug = true

[workspace]
members = ["benches-lib"]
