[package]
name = "callgrind-benches"
edition = "2024"

[workspace]
members = ["benches-lib"]

[[bench]]
harness = false
name = "bench"

[dependencies]
fast-glob = "1.0.1"
markdown-tables = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
benches-lib = { path = "benches-lib" }
gungraun = "0.19.2"
pastey = "0.2.3"

[profile.bench]
debug = true
