[package]
name = "criterion-benches"
edition = "2024"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
allocator-api2 = "0.2"
bump-scope = { version = "0.17.1", features = ["allocator-api2-02"] }
bumpalo = { version = "3.18.1", features = ["allocator-api2"] }
paste = "1.0.15"
criterion = { version = "0.5.1", features = ["html_reports"] }
